--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "autoprefixer": "^9.8.6",
+    "aws-amplify": "^3.0.24",
     "babel-plugin-macros": "^2.8.0",
     "postcss-cli": "^7.1.1",
     "react": "^16.13.1",
