added graphql api and testing out the api

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,28 +1,27 @@
 {
-	"api": {
-		"usatotogo": {
-			"service": "AppSync",
-			"providerPlugin": "awscloudformation",
-			"output": {
-				"authConfig": {
-					"additionalAuthenticationProviders": [],
-					"defaultAuthentication": {
-						"authenticationType": "API_KEY",
-						"apiKeyConfig": {
-							"description": "Ustotogo api",
-							"apiKeyExpirationDays": "100"
-						}
-					}
-				}
-			}
-		}
-	},
-	"auth": {
-		"usatotogo811418e4": {
-			"service": "Cognito",
-			"providerPlugin": "awscloudformation",
-			"dependsOn": [],
-			"customAuth": false
-		}
-	}
+    "api": {
+        "usatotogo": {
+            "service": "AppSync",
+            "providerPlugin": "awscloudformation",
+            "output": {
+                "authConfig": {
+                    "additionalAuthenticationProviders": [],
+                    "defaultAuthentication": {
+                        "authenticationType": "AMAZON_COGNITO_USER_POOLS",
+                        "userPoolConfig": {
+                            "userPoolId": "authusatotogo811418e4"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "auth": {
+        "usatotogo811418e4": {
+            "service": "Cognito",
+            "providerPlugin": "awscloudformation",
+            "dependsOn": [],
+            "customAuth": false
+        }
+    }
 }
