--- a/amplify/backend/auth/usatotogo2c3b151e/usatotogo2c3b151e-cloudformation-template.yml
+++ b/amplify/backend/auth/usatotogo2c3b151e/usatotogo2c3b151e-cloudformation-template.yml
@@ -124,7 +124,7 @@ Resources:
   # Created to allow the UserPool SMS Config to publish via the Simple Notification Service during MFA Process
     Type: AWS::IAM::Role
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, 'usatot811418e4_sns-role', !Join ['',[ 'sns', '811418e4', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, 'usatot2c3b151e_sns-role', !Join ['',[ 'sns', '2c3b151e', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
       AssumeRolePolicyDocument: 
         Version: "2012-10-17"
         Statement: 
@@ -136,10 +136,10 @@ Resources:
               - "sts:AssumeRole"
             Condition: 
               StringEquals:
-                sts:ExternalId: usatot811418e4_role_external_id
+                sts:ExternalId: usatot2c3b151e_role_external_id
       Policies: 
         - 
-          PolicyName: usatot811418e4-sns-policy
+          PolicyName: usatot2c3b151e-sns-policy
           PolicyDocument: 
             Version: "2012-10-17"
             Statement: 
@@ -187,7 +187,7 @@ Resources:
       SmsVerificationMessage: !Ref smsVerificationMessage
       SmsConfiguration: 
         SnsCallerArn: !GetAtt SNSRole.Arn
-        ExternalId: usatot811418e4_role_external_id
+        ExternalId: usatot2c3b151e_role_external_id
     
   
   UserPoolClientWeb:
@@ -195,7 +195,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: usatot811418e4_app_clientWeb
+      ClientName: usatot2c3b151e_app_clientWeb
       
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
       UserPoolId: !Ref UserPool
@@ -205,7 +205,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: usatot811418e4_app_client
+      ClientName: usatot2c3b151e_app_client
       
       GenerateSecret: !Ref userpoolClientGenerateSecret
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
@@ -216,7 +216,7 @@ Resources:
   # Created to execute Lambda which gets userpool app client config values
     Type: 'AWS::IAM::Role'
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',['upClientLambdaRole', '811418e4', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',['upClientLambdaRole', '2c3b151e', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
       AssumeRolePolicyDocument:
         Version: '2012-10-17'
         Statement:
@@ -270,7 +270,7 @@ Resources:
   # Marked as depending on UserPoolClientRole for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: usatot811418e4_userpoolclient_lambda_iam_policy
+      PolicyName: usatot2c3b151e_userpoolclient_lambda_iam_policy
       Roles: 
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -287,7 +287,7 @@ Resources:
   # Marked as depending on UserPoolClientLambdaPolicy for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: usatot811418e4_userpoolclient_lambda_log_policy
+      PolicyName: usatot2c3b151e_userpoolclient_lambda_log_policy
       Roles: 
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -674,7 +674,7 @@ Resources:
   # Always created
     Type: AWS::Cognito::IdentityPool
     Properties: 
-      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'usatotogo811418e4_identitypool_811418e4', !Join ['',['usatotogo811418e4_identitypool_811418e4', '__', !Ref env]]]
+      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'usatotogo2c3b151e_identitypool_2c3b151e', !Join ['',['usatotogo2c3b151e_identitypool_2c3b151e', '__', !Ref env]]]
       
       CognitoIdentityProviders:
         - ClientId:  !Ref UserPoolClient
